pages/tournament/create/index.module.sass
.tournamentCreateWrapper
  background: url("/assets/TournamentCreate/floatingBg3.png") no-repeat left bottom
  position: relative
  background-size: 400px
  background-position-x: -220px
  background-position-y: 72%
  overflow-x: hidden
  @media screen and (min-width: 1440px)
    background-size: 753px
    background-position-x: -290px
    background-position-y: bottom
  @media screen and (min-width: 1920px)
    width: 1920px
    margin: auto
    background-size: 754px 1155px
  @media screen and (min-width: 1921px)
    background-position-x: left
    overflow-x: visible
  &:before, &:after
    content: ''
    position: absolute
    z-index: 0
  &:before
    width: 450px
    aspect-ratio: 789 / 880
    background: url("/assets/TournamentCreate/floatingBg2.png") no-repeat top left
    background-size: contain
    top: 800px
    left: -200px
    @media screen and (min-width: 1440px)
      width: 789px
      top: 580px
  &:after
    width: 360px
    aspect-ratio: 791 / 1179
    background: url("/assets/TournamentCreate/floatingBg1.png") no-repeat top left
    background-size: contain
    top: 100px
    right: -90px
    @media screen and (min-width: 1440px)
      width: 791px
      right: -130px

.containerApp
  width: 100%
  min-height: 100vh
  padding-top: 90px
  p
    color: white
  :global(.ant-input)
    border-radius: 8px
    padding: 8px
  :global(.ant-select-dropdown)
    padding: 100px

.bracketType
  display: flex
  flex-direction: column
  text-color: white
  :global(.ant-radio-disabled + span)
    color: grey

.textColor
  color: white

.radioFee
  display: flex
  p
    min-width: 100px

.password
  margin-top: 20px
  :global(.ant-switch)
    background-color: grey !important
  :global(.ant-switch-checked)
    background-color: #1890ff !important
  :global(.ant-input[disabled])
    background-color: grey
  @media screen and (min-width: 576px)
    display: flex
    align-items: center
  .passwordLabelWrap
    margin-bottom: 15px
    display: flex
    align-items: center
    :global(.ant-switch)
      background-color: #bbb !important
    :global(.ant-switch-checked)
      background-color: #0BEBD6 !important
    :global(.ant-btn[disabled])
      background: #8b8b8b
      color: #ffffff
    @media screen and (min-width: 576px)
      margin-right: 15px
      margin-bottom: 0
    label
      font-size: 16px
      color: #FFFFFF
      margin-right: 12px
  .passwordInputWrap
    flex: 1
    @media screen and (min-width: 992px)
      max-width: 493px

.message_error
  font-size: 13px
  margin-top: 4px
  color: #FF2828

.containerApp
  :global(.ant-btn-default)
    border-color: #767295
  :global(.ant-table-container th),
  :global(.ant-table-container td)
    border-color: var(--line-color-light)!important
  :global(.ant-table.ant-table-bordered > .ant-table-container)
    border-color: var(--line-color-light)

  :global(.ql-toolbar.ql-snow),
  :global(.ql-container.ql-snow)
    border-color: var(--line-color)
  :global(.ql-snow .ql-stroke)
    stroke: #fff
  :global(.ql-snow .ql-picker-label::before)
    color: #fff !important


.btnChooseGame
  background: rgba(255, 255, 255, 0.5) !important
  border-radius: 8px
  width: 124px
  height: 106px
.tournamentCreateContainer
  position: relative
  z-index: 1
  @media screen and (min-width: 1200px)
    width: 1115px
.pageTitleWrapper
  margin-bottom: 30px
  display: flex
  flex-direction: column
  @media screen and (min-width: 576px)
    flex-direction: row
    align-items: center
    justify-content: space-between
  .pageTitle
    font-size: 18px
    font-weight: 600
    color: #00FFEC
    text-transform: uppercase
    background: linear-gradient(to right, rgba(12, 227, 216, 0.2), rgba(12, 230, 215, 0))
    padding: 5px 15px
    border-radius: 4px
    @media screen and (min-width: 576px)
      font-size: 24px
      margin-bottom: 0
    @media screen and (min-width: 768px)
      width: calc(100% - 270px)
      font-size: 30px

  .btnReset
    border: 1px solid rgba(18, 176, 180, 1)
    border-radius: 5px
    color: #12B0B4
    font-size: 16px
    font-weight: 500
    padding: 5px 7px
    line-height: 1
    align-self: flex-end
    img
      margin-right: 8px
      width: 13px
.formRow
  margin-bottom: 30px
  @media screen and (min-width: 992px)
    display: flex
    justify-content: space-between
    margin-bottom: 15px
  .formCol
    width: 100%
    @media screen and (min-width: 992px)
      display: flex
    &.formColLeft
      margin-bottom: 20px
      @media screen and (min-width: 768px)
        margin-bottom: 0
      @media screen and (min-width: 992px)
        width: 710px
    &.formColRight
      @media screen and (min-width: 992px)
        width: 336px
      .formLabel
        width: 128px
        &.formLabelWider
          min-width: 223px
        &.formLabelRegion
          width: 100px
    &.formColCover
      @media screen and (min-width: 768px)
        min-width: 500px
        margin-right: 20px
    .formLabel
      color: #ffffff
      font-size: 19px
      margin-bottom: 10px
      width: 160px
      padding-right: 10px
      display: inline-block
      @media screen and (min-width: 992px)
        padding-top: 5px
    .formContent
      flex: 1
    :global(.ant-radio-wrapper)
      align-items: center
      margin-bottom: 20px
      font-size: 16px
      color: #C4C4C4
    :global(.ant-radio-wrapper-checked)
      color: #ffffff
    :global(.ant-radio)
      margin-top: -5px
      :global(.ant-radio-inner)
        width: 24px
        height: 24px
        background: none
        border: 1px solid #C4C4C4
        display: flex
        justify-content: center
        align-items: center
        &:after
          width: 22px
          height: 22px
          max-width: 100%
          position: static
          margin-top: 0
          margin-left: 0
          top: unset
          left: unset
    :global(.ant-radio-checked)
      :global(.ant-radio-inner)
        border-color: rgba(11, 235, 214, 1)
        &:after
          background: rgba(11, 235, 214, 1)
.chooseGameWrap
  display: flex
  .gameItem
    display: flex
    align-items: center
    justify-content: center
    flex-direction: column
    background: rgba(255, 255, 255, 0.5) !important
    border-radius: 8px
    width: 124px
    height: 106px
    cursor: pointer
    img
      object-fit: cover
      object-position: center
    p
      padding: 0 5px
      margin-bottom: 0
.colThumbnailLabel
  @media screen and (min-width: 992px)
    text-align: right
    padding-left: 15px
    padding-right: 15px
.formImgUpload
  @media screen and (min-width: 768px)
    display: flex
    justify-content: space-between
  .imgUpload
    img
      width: 100%
      max-width: 100%
      object-fit: none
      object-position: center
      background: rgba(255, 255, 255, 0.45)
      backdrop-filter: blur(40px)
      border-radius: 8px
      border: 1px solid #A397CB
      cursor: pointer
    :global(.file-name)
      color: rgba(255, 255, 255, 0.7)
      overflow: hidden
      text-overflow: ellipsis
      margin-bottom: 5px
      font-style: italic
  .imgUploaded
    img
      object-fit: cover
      background: none
  .coverUpload
    .imgUpload
      img
        aspect-ratio: 1600 / 400
  .thumbnailUpload
    @media screen and (min-width: 992px)
      text-align: right
    .imgUpload
      img
        max-width: 150px
        aspect-ratio: 450 / 300
        @media screen and (min-width: 1200px)
          max-width: 213px
        @media screen and (min-width: 1400px)
          max-width: 248px
        @media screen and (min-width: 1920px)
          max-width: 300px
  .recommendedSize
    font-size: 14px
    font-weight: 500
    color: rgba(255, 255, 255, 0.7)
.formRowFlex
  @media screen and (min-width: 576px)
    display: flex
    .formCol
      &:first-of-type
        padding-right: 15px
      &:last-of-type
        padding-left: 15px
  @media screen and (min-width: 992px)
    .formCol
      &:last-of-type
        padding-left: 0
  @media screen and (min-width: 1200px)
    .formCol
      &:first-of-type
        padding-right: 0
  &.formChooseGame
    @media screen and (min-width: 360px)
      display: flex
      .formCol
        &:first-of-type
          padding-right: 5px
        &:last-of-type
          padding-left: 5px
    @media screen and (min-width: 576px)
      .formCol
        &:first-of-type
          padding-right: 15px
        &:last-of-type
          padding-left: 15px
    @media screen and (min-width: 992px)
      .formCol
        &:last-of-type
          padding-left: 0
    @media screen and (min-width: 1200px)
      .formCol
        &:first-of-type
          padding-right: 0
.btnTimeline
  background: linear-gradient(to right, rgba(24, 137, 228, 0.5), rgba(11, 235, 214, 0.5)) !important
  width: auto
  border: none
  text-align: left
  height: 40px
  color: #00FFFF !important
  font-size: 18px
  font-weight: 500
.refereeWrap
  display: flex
  flex-wrap: wrap
  .refereeList
    display: flex
    flex-wrap: wrap
    margin-right: 5px
    .refereeItem
      text-align: center
      width: 95px
      .refereeAvt
        border-radius: 50px
        width: 50px
        height: 50px
        object-fit: cover
        object-position: center
  .btnAddReferee
    border: none
    background: none
    width: 28px
    height: 28px
    padding: 0
    margin-top: 6px
.tournamentCreateSection
  margin-bottom: 100px
  .sectionTitle
    font-size: 20px
    line-height: 1.15
    color: #ffffff
    margin-bottom: 25px
.customQuill
  margin-bottom: 25px

.formFieldBg
  background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(217, 217, 217, 0.04)) !important
  backdrop-filter: blur(40px) !important
  font-size: 18px
  color: #ffffff
  font-weight: 500
  line-height: 1.15
  padding: 12px 15px
  border: none !important
  width: 100%
  border-radius: 4px
  height: 40px
  &.formFieldNumber
    height: 40px
    padding: 0
    :global(.ant-input-number)
      background: none !important
      backdrop-filter: blur(0) !important
      border: none
      padding: 0
      height: 100%
    :global(.ant-input-number-input-wrap)
      height: 100%
      input
        height: 100%
        font-size: 18px
  &.formFieldSelect
    padding: 0
    :global(.ant-select-selector)
      background: none
      border: none
      padding: 5px 10px
      height: 40px
      :global(.ant-select-selection-item)
        line-height: 1.6
    :global(.ant-select-arrow)
      background: url("/assets/iconCarretDown.svg") no-repeat center
      background-size: contain
      width: 13px
      height: 13px
      transform: translateY(-50%)
      margin-top: 0
      *
        display: none
.btnCreateTour
  background: linear-gradient(to right, rgba(24, 137, 228, 0.5), rgba(11, 235, 214, 0.5)) !important
  border: none
  font-size: 20px
  font-weight: 500
  width: 476px
  height: 44px
  padding: 10px
  line-height: 1
  max-width: 100%

